Fixed lowercase g to uppercase in Galaxy.jpg

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -51,7 +51,7 @@
 }
 
 .bg {
-  background-image: url('../assets/images/galaxy.jpg');
+  background-image: url('../assets/images/Galaxy.jpg');
   background-size:     1920px, 1080px;
   background-repeat:   repeat;
   background-position: center center;
